For the p value bar graph cells, getValueAt() now returns an ArrayList object instead of a double[]